fix: calendar-content gap 변경
기존 12px -> 24px로 변경

--- a/client/src/styles/components/calendar.scss
+++ b/client/src/styles/components/calendar.scss
@@ -42,7 +42,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 12px;
+  gap: 24px;
   align-self: stretch;
 }
 
